version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Mechanical/AdditionalProperties/ApplyCancelProperty.rst.txt
.. vale off



:class:`ApplyCancelProperty`
============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Mechanical.AdditionalProperties.ApplyCancelProperty

   Bases: :py:obj:`object`


   
   Provides a way to create properties with Apply/Cancel buttons.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ApplyCancelProperty

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~DisplayName`
            - The name of the property shown in the UI. If not set, the Name property is used.
          * - :py:attr:`~GroupName`
            - The group name of the property shown in the UI, and used to separate properties based on group name.
          * - :py:attr:`~Name`
            - The name of the property.
          * - :py:attr:`~ReadOnly`
            - Returns whether a property is readonly.
          * - :py:attr:`~Tooltip`
            - The tooltip of the property in the UI.
          * - :py:attr:`~Value`
            - The stored value of the property.
          * - :py:attr:`~ValueString`
            - Get the string representation of the value.







Property detail
---------------
.. py:property:: DisplayName
   :type: Optional[str]

   
   The name of the property shown in the UI. If not set, the Name property is used.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupName
   :type: Optional[str]

   
   The group name of the property shown in the UI, and used to separate properties based on group name.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   The name of the property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]

   
   Returns whether a property is readonly.
















   ..
       !! processed by numpydoc !!

.. py:property:: Tooltip
   :type: Optional[str]

   
   The tooltip of the property in the UI.
















   ..
       !! processed by numpydoc !!

.. py:property:: Value
   :type: Optional[Any]

   
   The stored value of the property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ValueString
   :type: Optional[str]

   
   Get the string representation of the value.
















   ..
       !! processed by numpydoc !!







.. vale on